# ream-dev

./: .fallowrc.json  .gitignore  .gitmodules  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: inker-ci.yml  nova-ci.yml  ream-mcp-ci.yml  ream-mcp-napi-ci.yml  station-ci.yml  verify.yml
apps/demo/: package.json  server.ts
apps/syndic/: package.json  reamrc.ts  tsconfig.json
apps/syndic/app/exceptions/: handler.ts
apps/syndic/app/middleware/: auth_middleware.ts  log_request_middleware.ts
apps/syndic/app/modules/communication/: routes.ts
apps/syndic/app/modules/communication/controllers/: MessagesController.ts
apps/syndic/app/modules/communication/entities/: Message.ts
apps/syndic/app/modules/communication/services/: MessageService.ts
apps/syndic/app/modules/health/: routes.ts
apps/syndic/app/modules/residence/: routes.ts
apps/syndic/app/modules/residence/controllers/: ResidencesController.ts
apps/syndic/app/modules/residence/entities/: Building.ts  Residence.ts  Unit.ts
apps/syndic/app/modules/residence/services/: ResidenceService.ts
apps/syndic/app/modules/task/: events.ts  routes.ts
apps/syndic/app/modules/task/controllers/: QuotesController.ts  TasksController.ts
apps/syndic/app/modules/task/entities/: Quote.ts  Task.ts  TaskEvent.ts
apps/syndic/app/modules/task/events/: TaskDeclared.ts  TaskTransitioned.ts
apps/syndic/app/modules/task/listeners/: LogTaskEvent.ts  LogTaskTransition.ts
apps/syndic/app/modules/task/services/: QuoteService.ts  TaskService.ts
apps/syndic/app/modules/task/validators/: CreateTaskValidator.ts
apps/syndic/app/modules/user/: routes.ts
apps/syndic/app/utils/: http-guards.ts
apps/syndic/config/: auth.ts  database.ts  logger.ts
apps/syndic/database/migrations/: 001_create_users.ts  002_create_residences.ts  003_create_buildings.ts  004_create_units.ts  005_create_memberships.ts  006_create_tasks.ts  007_create_task_events.ts  008_create_quotes.ts  009_create_messages.ts
apps/syndic/start/: kernel.ts
apps/syndic/tests/unit/: smoke.test.ts
benchmarks/: bench.ts  results.json
scripts/: bench.sh  duplicate-report.sh  migrate-dual-export.mjs  quality-packages.sh  setup.sh  verify-all.sh
(+5 files in other folders)
